--- a/styles.css
+++ b/styles.css
@@ -38,16 +38,18 @@ input {
 
 /* Button Styles */
 button {
-    padding: 10px 20px;
+    padding: 20px 30px;
     background-color: #007bff;
     color: white;
-    border: none;
-    border-radius: 5px;
+    text-align: center;
+    border: 4px solid #ddd;
+    border-radius: 9px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     transition: background-color 0.3s, transform 0.3s;
+    display: block;
+    margin: 15px auto; /* Center button and add vertical gap */
 }
-
 button:hover {
     background-color: #0056b3;
     transform: scale(1.05);
@@ -55,29 +57,29 @@ button:hover {
 
 /* Quiz Question Options */
 #question-container .option {
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ddd;
+    padding: 20px;
+    margin: 8px 0;
+    border: 3px solid #00d;
     border-radius: 5px;
     cursor: pointer;
-    background-color: #f9f9f9;
+    background-color:#ffffff;
     transition: background-color 0.3s;
 }
 
 #question-container .option:hover {
-    background-color: #e9ecef;
+    background-color: #fffff;
 }
 
 #question-container .option.selected {
-    background-color: #007bff;
+    background-color: #228B22;
     color: white;
 }
 
 /* Result Styles */
 .result-item {
     padding: 10px;
-    margin: 5px 0;
-    border-left: 5px solid transparent;
+    margin: 7px 0;
+    border-left: 15px solid transparent;
 }
 
 .result-item.correct {
